--- a/src/Csscomponent/Navbar.css
+++ b/src/Csscomponent/Navbar.css
@@ -82,8 +82,8 @@
     display: none;
 }
 
-.Hosting,.Domain{
-    background-color:#fff;
+.Hosting,.DomainHosting{
+    background-color:#fff !important;
     margin-top: 20px;
     border: 1px solid #e5e5e5;
     border-radius: 25px;
