--- a/src/Csscomponent/Carts.css
+++ b/src/Csscomponent/Carts.css
@@ -5,11 +5,13 @@ line-height: 40px;
 .Cart_left_Header{
    
     color:white;
-    font-size: 14px;
+    font-size: 24px;
 }
 
 .bg-value{
     background-image: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%);
+    font-weight: bold;
+    font-size: 24px;
 }
 
 .Cart_price{
