--- a/src/Csscomponent/Navbar.css
+++ b/src/Csscomponent/Navbar.css
@@ -2,18 +2,42 @@
     width:100%;
     position: fixed;
     top:0;
-    left:0;
     z-index:999;
-    height: 70px;
-    background-color: #2771ca;
-    box-shadow: 0px 4px 10px #2771ca;
+    height: 80px;
+    background-color: transparent;
+    transition: all .2s linear;
+    padding: 10px 0px;
+    margin: 30px 0px;
+    color: #fff;
 }
-.linkColor{
-    color:#fff;
+
+.Navbar_active{
+
+     background-color:  #fff; 
+     box-shadow: 0px 2px 0px #e3e3e3; 
+     margin: 0px 0px;
+     padding: 10px 0px;
+     color: #333333;
+
+
 }
+
+.Nav_item_link{
+ padding-right: 20px !important;
+ font-size: 18px;
+
+
+} 
+
+.Nav_item_link:hover{
+    cursor: pointer;
+
+   } 
+
 
 .Navline_remove{
   color: #000;
+  
 }
 
 .Navline_remove:hover{
@@ -27,7 +51,7 @@
     /* padding: 10px; */
     /* height: 600px;
     overflow: auto */ 
-    display: none;
+    /* display: none; */
 }
 
 
@@ -46,16 +70,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: white;
-    margin: 5px 20px;
+    margin: 5px 0px;
+    padding: 0px 0px;
 }
 
 .Logo{
  
-    font-size: 34px;
+    font-size: 32px;
     margin-top: -10px;
-    text-shadow: 2px 2px #d4d4d4;
-   
+    font-weight: 700;
 
 }
 
@@ -75,7 +98,7 @@
 }
 
 .sign_logout{
-    border: 1px solid #fff;
+    
 }
 
 .Mobile{
@@ -87,7 +110,7 @@
     margin-top: 20px;
     border: 1px solid #e5e5e5;
     border-radius: 25px;
-    box-shadow: 2px 2px 40px #d3d3d3;
+
     
 }
 
@@ -146,8 +169,6 @@ font-weight: bolder;
 
 
 .Login_button{
- 
-    margin: auto;
     width: 200px;
     display: block;
     background-color: #2771ca;
@@ -179,10 +200,107 @@ font-weight: bolder;
 }
 
 
+.linkColor{
+    color: #fff;
+}
 
-@media only screen and (max-width: 576px) {
+.whitelogo{
+    color: #000;
+}
+@media only screen and (max-width: 768px) {
+
+    .Navbar{
+        background-color: #fff; 
+        margin: 0px 0px;
+        color: #333333;
+    }
+
+    .linkColor{
+        color: #000;
+    }
+
+    .Desktop{
+        display: none;
+    }
+
     .Mobile{
         display: inline-block;
+        
+    }
+
+
+
+    .Nav_item_link{
+        padding-right: 20px !important;
+        font-size: 14px;
+       
+       } 
+
+       .Nav_wrapper{
+        margin: 15px 20px;
+        padding: 0px;
+    }
+
+       .Logo{
+        font-size: 30px; 
+        margin-top: 2px;   
+    }
+
+    .whitelogo{
+        color: #000;
+       
+    }
+}
+
+
+
+.Mobie_menu{
+        
+    background-color: rgba(255, 255, 255,1); 
+    margin-top: -1px;
+    /* padding: 10px; */
+    height: 100vh;
+    width: 0%;
+    transition: all .3s linear;
+    overflow: auto;
+    white-space: nowrap;
+}
+
+.Mobie_menu_visible{
+
+    width: 46%;
+
+}
+
+.MobilesubLink{
+
+    transition: all .3s linear;
+    color: #000;
+
+}
+
+.MobilesubLink:hover{
+    padding-left: 1em;
+    text-decoration: none;
+    color: #033572;
+ 
+  }
+
+.MobilesubLink:hover{
+    padding-left: 1em;
+   
+  }
+
+@media only screen and (max-width: 576px) {
+    .Navbar{
+        background-color: #fff; 
+        margin: 0px 0px;
+        color: #000;
+
+    }
+    .Mobile{
+        display: inline-block;
+       
     }
     .Desktop{
         display: none;
@@ -190,20 +308,26 @@ font-weight: bolder;
 
     .Nav_wrapper{
         margin: 15px 20px;
+        padding: 0px;
     }
 
     .Mobie_menu{
         
-        background-color: #418fee;
+        background-color: #fff; 
         margin-top: -1px;
         /* padding: 10px; */
-        height: 400px;
-        overflow: auto
+        width: 100%;
+        height: 100vh;
+        overflow: auto;
+        display: none;
     }
+
+
 
     .Mobie_menu_visible{
         display: block;
     }
+
 
     .Login{
         width: 350px;
