--- a/src/Csscomponent/WebHosting.css
+++ b/src/Csscomponent/WebHosting.css
@@ -2,7 +2,7 @@
  border:1px solid #e5e5e5;
  padding: 20px 10px;
  box-shadow: 0px 0px 20px #bebebe;
- transition: all 1s;
+ transition: all .3s ease-in;
  
 }
 
